fix: use localePath for docs sidebar links
- Update sidebar links to use localePath template function
- This ensures links work for all languages (en, tr)
- Use print function to build canonical path with slug

--- a/templates/pages/docs.html
+++ b/templates/pages/docs.html
@@ -11,13 +11,13 @@
       {{range .Doc.Sidebar}}
       {{if eq .Level 0}}
       <div class="docs-nav-section">
-        <a href="/docs/{{.Slug}}" class="docs-nav-link{{if eq .Slug $.Doc.CurrentSlug}} active{{end}}">
+        <a href="{{localePath (print "/docs/" .Slug) $.Lang}}" class="docs-nav-link{{if eq .Slug $.Doc.CurrentSlug}} active{{end}}">
           {{.Title}}
         </a>
       </div>
       {{else if eq .Level 1}}
       <div class="docs-nav-item">
-        <a href="/docs/{{.Slug}}" class="docs-nav-link{{if eq .Slug $.Doc.CurrentSlug}} active{{end}}">
+        <a href="{{localePath (print "/docs/" .Slug) $.Lang}}" class="docs-nav-link{{if eq .Slug $.Doc.CurrentSlug}} active{{end}}">
           {{.Title}}
         </a>
       </div>
