feat: add i18n support for docs UI and fix Turkish anchors
- Add i18n instance to docs handler
- Translate sidebar titles, "Documentation", "On this page" etc.
- Update template to use translation keys (t function)
- Add translation keys to en.json and tr.json for:
  - docs.title, docs.on_this_page
  - All sidebar items (overview, getting_started, etc.)
  - Error messages (not_found, not_found_message)

This fixes Turkish docs showing English UI elements.

--- a/templates/pages/docs.html
+++ b/templates/pages/docs.html
@@ -5,7 +5,7 @@
 <div class="docs-container">
   <aside class="docs-sidebar">
     <div class="docs-sidebar-header">
-      <h2>Documentation</h2>
+      <h2>{{t "docs.title"}}</h2>
     </div>
     <nav class="docs-nav">
       {{range .Doc.Sidebar}}
@@ -36,7 +36,7 @@
 
   {{if .Doc.TOC}}
   <aside class="docs-toc">
-    <h3>On this page</h3>
+    <h3>{{t "docs.on_this_page"}}</h3>
     <ul class="docs-toc-list">
       {{range .Doc.TOC}}
       <li>
