style: add Statigo suffix to page titles
Add " | Statigo" suffix to all page titles for brand consistency:
- Updated base template to include suffix
- Updated docs template (which overrides title block)

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
 
     {{/* Page Title */}}
-    <title>{{block "title" .}}{{if .Title}}{{.Title}}{{else}}Statigo{{end}}{{end}}</title>
+    <title>{{block "title" .}}{{if .Title}}{{.Title}}{{else}}Statigo{{end}} | Statigo{{end}}</title>
 
     {{/* Meta Description */}}
     {{- if .Meta}}
