--- a/templates/pages/docs.html
+++ b/templates/pages/docs.html
@@ -1,4 +1,4 @@
-{{define "title"}}{{.Doc.Title}}{{end}}
+{{define "title"}}{{.Doc.Title}} | Statigo{{end}}
 {{template "base" .}}
 
 {{define "main"}}
